istio/virtual-services/argo.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo-virtual-service
  namespace: argocd
spec:
  hosts:
    - "argo.desk.com"
  gateways:
    - argocd-gateway
  http:
    - route:
        - destination:
            host: argocd-server
            port:
              number: 80
