istio/virtual-services/grafana.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: monitoring
spec:
  hosts:
    - "grafana.desk.com"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
