istio/virtual-services/jaeger.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtual-service
  namespace: monitoring
spec:
  hosts:
    - "jaeger.desk.com"
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
